--- a/Project Management Website/public/index.html
+++ b/Project Management Website/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>G.Chairs</title>
+    <title>Project Management</title>
   </head>
 
   <body>
